LI-205: simplify the LAMS installer